<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.temple.bitcoindashboard.BlockFragment">


    <TextView
        android:text="@string/BlockNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/Loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:id="@+id/blockNum"
        android:textSize="20sp" />

    <TextView
        android:text="@string/Hash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blockNum"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/Loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:id="@+id/hashNum"
        android:textSize="20sp" />

    <TextView
        android:text="@string/Merkleroot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hashNum"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/Loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:id="@+id/merkleRoot"
        android:textSize="20sp" />

    <TextView
        android:text="@string/Confirmations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/merkleRoot"
        android:layout_alignParentStart="true"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/Loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:id="@+id/blockConfirm"
        android:textSize="20sp" />

    <TextView
        android:text="@string/Size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blockConfirm"
        android:layout_alignParentStart="true"
        android:id="@+id/textView5"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/Loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:id="@+id/blockSize"
        android:textSize="20sp" />

    <TextView
        android:text="@string/Difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blockSize"
        android:layout_alignParentStart="true"
        android:id="@+id/textView6"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/Loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:id="@+id/blockDifficulty"
        android:textSize="20sp" />

    <TextView
        android:text="@string/NextBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blockDifficulty"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/Loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:id="@+id/nextBlock"
        android:textSize="20sp" />

    <TextView
        android:text="@string/PreviousBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nextBlock"
        android:layout_alignParentStart="true"
        android:id="@+id/textView9"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/Loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:id="@+id/prevBlock"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/BlockHint"
        android:ems="10"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/searchBlock" />

    <Button
        android:text="@string/Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/searchButton" />

</RelativeLayout>
